<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="417dp"
        android:layout_height="300dp"
        android:layout_marginTop="167dp"
        android:layout_marginBottom="168dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/main_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_button" />

        <Button
            android:id="@+id/list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_button" />

        <Button
            android:id="@+id/my_device_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_device_button" />

        <Button
            android:id="@+id/equals_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equals_button" />

        <Button
            android:id="@+id/visit_page_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit_page_button" />

        <Button
            android:id="@+id/about_program_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_program_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>